# iai-callgrind

./: .bumpversion.cfg  .cirrus.yml  .clangd  .clippy.toml  .editorconfig  .gitignore  .markdownlint.json  .perltidyrc  .taplo.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  LICENSE-MIT  README.md  VISION.md  cspell.json  deny.toml  index.html  renovate.json  rustfmt.toml  versions.js
benchmark-tests/: .valgrindrc  Cargo.toml  LICENSE-APACHE  README.md  build.rs  valgrind-suppressions.supp
benchmark-tests/benches/: bin_bench.rs  test_bench.rs  test_bench_template.rs  test_bin_bench.rs  test_bin_bench_flamegraph.conf.yml  test_bin_bench_flamegraph.expected.1.yml  test_bin_bench_flamegraph.expected.2.yml  test_bin_bench_flamegraph.expected.json  test_bin_bench_flamegraph.expected.yml  test_bin_bench_flamegraph.rs  test_bin_bench_groups.conf.yml  test_bin_bench_groups.expected.1.yml  test_bin_bench_groups.expected.json  test_bin_bench_groups.expected.yml  test_bin_bench_groups.rs  test_bin_bench_readme_example.conf.yml  test_bin_bench_readme_example.expected.json  test_bin_bench_readme_example.expected.yml  test_bin_bench_readme_example.rs  test_bin_bench_tools.conf.yml  test_bin_bench_tools.expected.1.yml  test_bin_bench_tools.expected.2.yml  test_bin_bench_tools.expected.json  test_bin_bench_tools.expected.yml  test_bin_bench_tools.rs  test_bin_bench_with_envs.rs  test_bin_bench_with_exit.conf.yml  test_bin_bench_with_exit.expected.1.yml  test_bin_bench_with_exit.expected.2.yml  test_bin_bench_with_exit.expected.json  test_bin_bench_with_exit.expected.yml  test_bin_bench_with_exit.rs  test_bin_bench_with_fixtures.conf.yml  test_bin_bench_with_fixtures.expected.1.yml  test_bin_bench_with_fixtures.expected.2.yml  test_bin_bench_with_fixtures.expected.json  test_bin_bench_with_fixtures.expected.yml  test_bin_bench_with_fixtures.rs  test_bin_bench_with_fixtures_symlinks.rs  test_lib_bench.rs  (+78 more)
benchmark-tests/benches/fixtures/: file_content.inputs  two_lines.fix  with_empty_line.fix
benchmark-tests/benches/guide/: lib_bench_dhat.rs  lib_bench_find_primes.rs  lib_bench_regression.rs  lib_bench_subprocess.rs  lib_bench_threads.rs  lib_bench_tolerance.rs
benchmark-tests/benches/test_bin_bench_groups.fixtures/: benchmark-tests-echo.foo.foo bar.txt
benchmark-tests/fixtures-with-symlinks/: file_with_content.txt
benchmark-tests/src/: assert.rs  bench.rs  benchmark-tests-cat.rs  benchmark-tests-echo.rs  benchmark-tests-exit.rs  benchmark-tests-printargs.rs  benchmark-tests-printenv.rs  benchmark-tests-sort.rs  benchmark-tests-subprocess.rs  common.rs  lib.rs  main.rs  serde.rs  serde_rust_version.rs
benchmark-tests/src/helper/: bubble-sort.rs  cat.rs  client-requests.rs  echo.rs  env.rs  exit-with.rs  file-exists.rs  leak-memory.rs  pipe.rs  read-file.rs  subprocess.rs  thread.rs
client-request-tests/: Cargo.toml  README.md  build.rs
client-request-tests/src/: lib.rs
client-request-tests/tests/: cmd_tests.rs  tests.rs
client-request-tests/tests/cmd/: callgrind_in_valgrind.stderr  callgrind_in_valgrind.toml  callgrind_native.toml  print-macros-test-native.toml  print-macros-test.stderr  print-macros-test.toml
client-request-tests/tests/common/: mod.rs
client-request-tests/tests/fixtures/: cachegrind-reqs-test.since_1.79.0.armv7.stderr  cachegrind-reqs-test.stderr  memcheck-reqs-test.armv7.stderr  memcheck-reqs-test.freebsd.stderr  memcheck-reqs-test.s390x.stderr  memcheck-reqs-test.stderr  memcheck-reqs-test.x86_64.stderr  print-macros-test.since_1.79.0.armv7.stderr  print-macros-test.stderr  valgrind-reqs-test.freebsd.stderr  valgrind-reqs-test.stderr
client-request-tests/tests/test_client_requests/: cachegrind.rs  callgrind.rs  memcheck.rs  mod.rs  print_macros.rs  valgrind.rs
client-request-tests/valgrind/: wrapper.c
iai-callgrind/: Cargo.toml  build.rs
iai-callgrind-macros/: Cargo.toml  README.md  build.rs
iai-callgrind-macros/src/: bin_bench.rs  common.rs  defaults.rs  derive_macros.rs  lib.rs  lib_bench.rs
iai-callgrind-runner/: .markdownlint.json  Cargo.toml  README.md  build.rs
iai-callgrind-runner/benches/: test_bin_bench.rs  test_with_skip_setup.rs
iai-callgrind-runner/schemas/: summary.v1.schema.json  summary.v3.schema.json  summary.v4.schema.json  summary.v5.schema.json  summary.v6.schema.json
iai-callgrind-runner/src/: api.rs  bin_bench.rs  callgrind.rs  error.rs  lib.rs  lib_bench.rs  main.rs  meta.rs  schema_gen.rs  serde.rs  util.rs
iai-callgrind-runner/src/runner/: args.rs  bin_bench.rs  callgrind.rs  common.rs  costs.rs  flamegraph.rs  format.rs  lib_bench.rs  meta.rs  metrics.rs  mod.rs  print.rs  summary.rs
iai-callgrind-runner/tests/: tests.rs
iai-callgrind-runner/tests/common/: mod.rs
iai-callgrind-runner/tests/test_callgrind/: mod.rs  test_flamegraph_parser.rs  test_hashmap_parser.rs  test_sentinel_parser.rs  test_summary_parser.rs  test_tools.rs
iai-callgrind-runner/tests/test_dhat/: mod.rs  test_dhat_tree.rs  test_serde.rs
iai-callgrind-runner/tests/test_runner_binary/: mod.rs  test_version.rs
iai-callgrind-runner/tests/test_tool/: mod.rs  test_error_metrics_parser.rs  test_parse_logfile_header.rs
iai-callgrind/src/: bin_bench.rs  common.rs  error.rs  internal.rs  lib.rs  lib_bench.rs  macros.rs
iai-callgrind/src/__internal/: bin_bench.rs  error.rs  lib_bench.rs  mod.rs
iai-callgrind/src/client_requests/: bindings.rs  cachegrind.rs  callgrind.rs  dhat.rs  drd.rs  error.rs  helgrind.rs  memcheck.rs  mod.rs  native_bindings.rs  valgrind.rs
iai-callgrind/tests/: tests.rs  ui_tests.rs
iai-callgrind/tests/fixtures/: numbers.fix
iai-callgrind/tests/macros/: binary_benchmark_attribute.rs  mod.rs
iai-callgrind/tests/ui/: test_binary_benchmark_attribute_when_invalid.rs  test_binary_benchmark_attribute_when_invalid.stderr  test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs  test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.stderr  (+53 more)
iai-callgrind/valgrind/: native.c  wrapper.h
schema-gen/: Cargo.toml  README.md
schema-gen/src/: main.rs
(+1014 files in other folders)
