[workspace]
members = [
  "iai-callgrind",
  "iai-callgrind-runner",
  "iai-callgrind-macros",
  "benchmark-tests",
  "client-request-tests",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = ">=1.0.46, <2" }
assert_cmd = { version = "2.0" }
bincode = { version = "1" }
bindgen = { version = "0.69" }
cargo_metadata = { version = "0.17" }
cc = { version = "1" }
cfg-if = { version = "1" }
clap = { version = ">=3.2.3, <3.2.24", features = ["derive", "env"] }
colored = { version = ">=1.6, <3" }
cty = { version = "0.2" }
env_logger = { version = ">=0.7, <0.11" }
fs_extra = { version = "1.3" }
glob = { version = "0.3" }
indexmap = { version = "1.9", features = ["serde"] }
inferno = { version = "0.11.10", default-features = false, features = [
  'multithreaded',
] }
lazy_static = { version = "1.4.0" }
log = { version = "0.4" }
new_string_template = { version = "1.4" }
predicates = { version = "3" }
pretty_assertions = "1"
proc-macro-error = "1"
proc-macro2 = ">=1.0.60, <2"
quote = "1"
regex = { version = "1" }
rstest = ">=0.17, <0.19"
sanitize-filename = { version = "0.5" }
schemars = { version = "0.8.16", features = ["indexmap1"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
serial_test = { version = "2" }
shlex = { version = "1" }
syn = { version = ">=2.0.1, <3", features = ["full", "extra-traits"] }
tempfile = { version = "3" }
trybuild = "1"
valico = { version = "4" }
version-compare = { version = "0.1" }
which = { version = "4" }
