[workspace]
members = [
  "iai-callgrind",
  "iai-callgrind-runner",
  "iai-callgrind-macros",
  "benchmark-tests",
  "client-request-tests",
  "schema-gen",
]
resolver = "2"

[workspace.package]
categories = ["development-tools::profiling", "development-tools::testing"]
edition = "2021"
homepage = "https://github.com/iai-callgrind/iai-callgrind"
keywords = ["iai", "benchmark", "callgrind", "valgrind"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/iai-callgrind/iai-callgrind"
rust-version = "1.67.1"
version = "0.14.0"

[workspace.dependencies]
anyhow = { version = "1.0.46" }
assert_cmd = { version = "2.0" }
bincode = { version = "1" }
bindgen = { version = ">=0.69, <0.71" }
cargo_metadata = { version = "0.18" }
cc = { version = "1" }
cfg-if = { version = "1" }
clap = { version = "4", features = ["derive", "env"] }
colored = { version = "2" }
cty = { version = "0.2" }
derive_more = { version = ">=0.99, <2", default-features = false }
env_logger = { version = ">=0.7, <0.12" }
fs_extra = { version = "1.3" }
glob = { version = "0.3" }
indexmap = { version = "2", features = ["serde"] }
inferno = { version = "0.12.0", default-features = false, features = [
  'multithreaded',
] }
itertools = { version = "0.13" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.8" }
minijinja = { version = "2.0.1" }
once_cell = { version = "1" }
predicates = { version = "3" }
pretty_assertions = "1.1"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.63"
quote = "1.0.28"
regex = { version = "1.9" }
rstest = { version = ">=0.17, <0.24", default-features = false }
sanitize-filename = { version = "0.5" }
schemars = { version = "0.8.16" }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.79" }
serde_regex = { version = "1.1" }
serde_yaml = { version = "0.9" }
serial_test = { version = "3" }
shlex = { version = "1.3" }
strum = { version = "0.26" }
syn = { version = "2.0.32", features = ["full", "extra-traits"] }
tempfile = { version = "3" }
tokio = { version = "1" }
trybuild = "1.0.18"
valico = { version = "4" }
version-compare = { version = "0.2" }
which = { version = ">=5, <7" }
