# spell-checker:ignore autobenches

[package]
authors = ["Joining7943 <joining@posteo.de>"]
autobenches = false
categories.workspace = true
description = "Tests for iai-callgrind"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "benchmark-tests"
publish = false
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
colored = { workspace = true }
fs_extra = { workspace = true }
glob = { workspace = true }
iai-callgrind = { path = "../iai-callgrind", features = ["client_requests"] }
iai-callgrind-runner = { path = "../iai-callgrind-runner" }
lazy_static = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
rustc_version = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
valico = { workspace = true }
version-compare = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]
name = "sort"
path = "src/helper/sort.rs"

[[bin]]
name = "echo"
path = "src/helper/echo.rs"

[[bin]]
name = "cat"
path = "src/helper/cat.rs"

[[bin]]
name = "read-file"
path = "src/helper/read-file.rs"

[[bin]]
name = "file-exists"
path = "src/helper/file-exists.rs"

[[bin]]
name = "pipe"
path = "src/helper/pipe.rs"

[[bin]]
name = "env"
path = "src/helper/env.rs"

[[bin]]
name = "exit-with"
path = "src/helper/exit-with.rs"

[[bin]]
name = "client-requests"
path = "src/helper/client-requests.rs"

[[bin]]
name = "thread"
path = "src/helper/thread.rs"

[[bin]]
name = "subprocess"
path = "src/helper/subprocess.rs"

[[bench]]
harness = false
name = "test_bench_template"

[[bench]]
harness = false
name = "test_bin_bench_setup_and_teardown"
path = "benches/test_bin_bench/setup_and_teardown/test_bin_bench_setup_and_teardown.rs"

[[bench]]
harness = false
name = "test_bin_bench_main_and_group_setup_and_teardown"
path = "benches/test_bin_bench/main_and_group_setup_and_teardown/test_bin_bench_main_and_group_setup_and_teardown.rs"

[[bench]]
harness = false
name = "test_bin_bench_nocapture"
path = "benches/test_bin_bench/nocapture/test_bin_bench_nocapture.rs"

[[bench]]
harness = false
name = "test_bin_bench_compare_by_id"
path = "benches/test_bin_bench/compare_by_id/test_bin_bench_compare_by_id.rs"

[[bench]]
harness = false
name = "test_bin_bench_setup_child_exit_with_error"
path = "benches/test_bin_bench/setup_child_exit_with_error/test_bin_bench_setup_child_exit_with_error.rs"

[[bench]]
harness = false
name = "test_bin_bench_setup_child"
path = "benches/test_bin_bench/setup_child/test_bin_bench_setup_child.rs"

[[bench]]
harness = false
name = "test_bin_bench_config"
path = "benches/test_bin_bench/config/test_bin_bench_config.rs"

[[bench]]
harness = false
name = "test_bin_bench_sandbox"
path = "benches/test_bin_bench/sandbox/test_bin_bench_sandbox.rs"

[[bench]]
harness = false
name = "test_bin_bench_intro"
path = "benches/test_bin_bench/intro/test_bin_bench_intro.rs"

[[bench]]
harness = false
name = "test_bin_bench_low_level"
path = "benches/test_bin_bench/low_level/test_bin_bench_low_level.rs"

[[bench]]
harness = false
name = "test_bin_bench_paths"
path = "benches/test_bin_bench/paths/test_bin_bench_paths.rs"

[[bench]]
harness = false
name = "test_bin_bench_command_delay"
path = "benches/test_bin_bench/command_delay/test_bin_bench_command_delay.rs"

[[bench]]
harness = false
name = "test_bin_bench_client_requests"
path = "benches/test_bin_bench/client_requests/test_bin_bench_client_requests.rs"

[[bench]]
harness = false
name = "test_bin_bench_tools"
path = "benches/test_bin_bench/tools/test_bin_bench_tools.rs"

[[bench]]
harness = false
name = "test_lib_bench_flamegraph"
path = "benches/test_lib_bench/flamegraph/test_lib_bench_flamegraph.rs"

[[bench]]
harness = false
name = "test_lib_bench_cache_sim"
path = "benches/test_lib_bench/cache_sim/test_lib_bench_cache_sim.rs"

[[bench]]
harness = false
name = "test_lib_bench_groups"
path = "benches/test_lib_bench/groups/test_lib_bench_groups.rs"

[[bench]]
harness = false
name = "test_lib_bench_compare"
path = "benches/test_lib_bench/compare/test_lib_bench_compare.rs"

[[bench]]
harness = false
name = "test_lib_bench_groups_envs"
path = "benches/test_lib_bench/groups_envs/test_lib_bench_groups_envs.rs"

[[bench]]
harness = false
name = "test_lib_bench_readme_example_fibonacci"
path = "benches/test_lib_bench/readme_example_fibonacci/test_lib_bench_readme_example_fibonacci.rs"

[[bench]]
harness = false
name = "test_lib_bench_tools"
path = "benches/test_lib_bench/tools/test_lib_bench_tools.rs"

[[bench]]
harness = false
name = "test_lib_bench_setup_and_teardown"
path = "benches/test_lib_bench/setup_and_teardown/test_lib_bench_setup_and_teardown.rs"

[[bench]]
harness = false
name = "test_lib_bench_nocapture"
path = "benches/test_lib_bench/nocapture/test_lib_bench_nocapture.rs"

[[bench]]
harness = false
name = "test_lib_bench_compiler_optimization"
path = "benches/test_lib_bench/compiler_optimization/test_lib_bench_compiler_optimization.rs"

[[bench]]
harness = false
name = "test_lib_bench_generics"
path = "benches/test_lib_bench/generics/test_lib_bench_generics.rs"

[[bench]]
harness = false
name = "test_lib_bench_main_and_group_setup_and_teardown"
path = "benches/test_lib_bench/main_and_group_setup_and_teardown/test_lib_bench_main_and_group_setup_and_teardown.rs"

[[bench]]
harness = false
name = "test_lib_bench_file_parameter"
path = "benches/test_lib_bench/file_parameter/test_lib_bench_file_parameter.rs"

[[bench]]
harness = false
name = "test_lib_bench_entry_point"
path = "benches/test_lib_bench/entry_point/test_lib_bench_entry_point.rs"

[[bench]]
harness = false
name = "test_lib_bench_threads"
path = "benches/test_lib_bench/threads/test_lib_bench_threads.rs"

[[bench]]
harness = false
name = "test_lib_bench_parts"
path = "benches/test_lib_bench/parts/test_lib_bench_parts.rs"

[[bench]]
harness = false
name = "test_lib_bench_output_format"
path = "benches/test_lib_bench/output_format/test_lib_bench_output_format.rs"

[[bench]]
harness = false
name = "test_lib_bench_all_args"
path = "benches/test_lib_bench/all_args/test_lib_bench_all_args.rs"

[[bench]]
harness = false
name = "lib_bench_threads"
path = "benches/guide/lib_bench_threads.rs"

[[bench]]
harness = false
name = "lib_bench_subprocess"
path = "benches/guide/lib_bench_subprocess.rs"
