[package]
name = "client-request-tests"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Joining7943 <joining@posteo.de>"]
description = "Tests for iai-callgrind client requests"
readme = "../README.md"
homepage = "https://github.com/iai-callgrind/iai-callgrind"
repository = "https://github.com/iai-callgrind/iai-callgrind"
license = "Apache-2.0 OR MIT"

[build-dependencies]
fs_extra = { version = "1.3" }

[dependencies]
cty = { version = "0.2" }
iai-callgrind = { path = "../iai-callgrind/", version = "=0.9.0", default-features = false, features = [
  "client_requests_defs",
] }
lazy_static = { version = "1.4" }
regex = { version = "1.9" }
shlex = { version = "1.2" }
which = { version = "5" }

[dev-dependencies]
assert_cmd = { version = "2.0" }
fs_extra = { version = "1.3" }
iai-callgrind = { path = "../iai-callgrind/", version = "=0.9.0", default-features = false, features = [
  "client_requests",
] }
predicates = { version = "3" }
rstest = { version = "0.18" }
tempfile = { version = "3" }
