[package]
name = "client-request-tests"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Joining7943 <joining@posteo.de>"]
description = "Tests for iai-callgrind client requests"
readme = "../README.md"
homepage = "https://github.com/iai-callgrind/iai-callgrind"
repository = "https://github.com/iai-callgrind/iai-callgrind"
license = "Apache-2.0 OR MIT"

[build-dependencies]
fs_extra = { workspace = true }

[dependencies]
cty = { workspace = true }
iai-callgrind = { path = "../iai-callgrind/", version = "=0.9.0", default-features = false, features = [
  "client_requests_defs",
] }
lazy_static = { workspace = true }
regex = { workspace = true }
shlex = { workspace = true }
which = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
fs_extra = { workspace = true }
iai-callgrind = { path = "../iai-callgrind/", version = "=0.9.0", default-features = false, features = [
  "client_requests",
] }
predicates = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
