[package]
authors = ["Joining7943 <joining@posteo.de>"]
categories.workspace = true
description = "Tests for iai-callgrind client requests"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "client-request-tests"
publish = false
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[build-dependencies]
fs_extra = { workspace = true }

[dependencies]
cty = { workspace = true }
iai-callgrind = { path = "../iai-callgrind", version = "=0.13.4", default-features = false, features = [
  "client_requests_defs",
] }
lazy_static = { workspace = true }
regex = { workspace = true }
shlex = { workspace = true }
which = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
fs_extra = { workspace = true }
iai-callgrind = { path = "../iai-callgrind", version = "=0.13.4", default-features = false, features = [
  "client_requests",
] }
predicates = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
version-compare = { workspace = true }
