[package]
authors = ["Joining7943 <joining@posteo.de>"]
categories.workspace = true
description = "Proc macros for iai-callgrind, a high-precision and consistent benchmarking framework/harness for Rust"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "iai-callgrind-macros"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
