[package]
authors = ["Joining7943 <joining@posteo.de>"]
categories.workspace = true
description = "Proc macros for iai-callgrind, a high-precision and consistent benchmarking framework/harness for Rust"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "iai-callgrind-macros"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.6.1"

[features]
cachegrind = []

[lib]
proc-macro = true

[build-dependencies]
rustc_version = { workspace = true }

[dependencies]
derive_more = { workspace = true, default-features = false, features = [
  "deref",
  "deref_mut",
] }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[lints.clippy]
pedantic = "warn"
default_numeric_fallback = "warn"
else_if_without_else = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
mixed_read_write_in_expression = "warn"
partial_pub_fields = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
enum_glob_use = "allow"
module_name_repetitions = "allow"
