# spell-checker: ignore polonius

[package]
authors = [
  "Joining7943 <joining@posteo.de>",
  "Brook Heisler <redattack34@gmail.com>",
]
categories.workspace = true
description = "Binary package needed by the iai-callgrind library"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "iai-callgrind-runner"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
api = ["dep:serde"]
default = ["runner"]
runner = [
  "api",
  "dep:anyhow",
  "dep:bincode",
  "dep:cargo_metadata",
  "dep:clap",
  "dep:colored",
  "dep:derive_more",
  "dep:env_logger",
  "dep:glob",
  "dep:indexmap",
  "dep:inferno",
  "dep:itertools",
  "dep:lazy_static",
  "dep:log",
  "dep:polonius-the-crab",
  "dep:regex",
  "dep:sanitize-filename",
  "dep:serde",
  "dep:serde_json",
  "dep:serde_regex",
  "dep:shlex",
  "dep:strum",
  "dep:tempfile",
  "dep:version-compare",
  "dep:which",
]
schema = ["default", "dep:schemars"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
cargo_metadata = { workspace = true, optional = true }
clap = { workspace = true, optional = true, features = [
  "derive",
  "env",
  "wrap_help",
] }
colored = { workspace = true, optional = true }
derive_more = { workspace = true, optional = true, features = ["as_ref"] }
env_logger = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true, features = ["serde"] }
inferno = { workspace = true, optional = true, default-features = false, features = [
  'multithreaded',
] }
itertools = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
log = { workspace = true, optional = true }
polonius-the-crab = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
sanitize-filename = { workspace = true, optional = true }
schemars = { workspace = true, optional = true, features = ["indexmap2"] }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_regex = { workspace = true, optional = true }
shlex = { workspace = true, optional = true }
strum = { workspace = true, optional = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
version-compare = { workspace = true, optional = true }
which = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serde_yaml = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "iai-callgrind-runner"
path = "src/main.rs"

[lints.rust]
missing_docs = "allow"

[lints.clippy]
pedantic = "warn"
default_numeric_fallback = "warn"
else_if_without_else = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
mixed_read_write_in_expression = "warn"
partial_pub_fields = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_to_string = "warn"
todo = "warn"
dbg_macro = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
enum_glob_use = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
